# argus

./: README.md  main.py  product_info_20240815220733.json  product_info_20240815222002.json  product_info_20240815223135.json  pyproject.toml
src/api/: main.py
src/argus/: crew.py  main.py
src/argus/config/: agents.yaml  tasks.yaml
src/argus/tools/: json_tool.py  vision_tool.py
